doc(server): update url doc after add pagination
